# trivia-game

./: Cargo.toml
src/: main.rs
src/opentdb/: mod.rs  opentdb_client.rs  question.rs  quiz.rs
