[package]
name = "trivia-game"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dialoguer = { version = "0.11.0" }
console = { version = "0.15.8" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
html-escape = "0.2.13"
